add project description

--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
           <a href="/secondFile.html">Click me!</a>
 
           <p class="about-description">
-            No experiaence but eager to learn. For me IT it is a new
-            level of cariee development and grow from IT procurement
-            specialist to IT specialist
+            I am a Junior Front End developer. I had practical
+            experience in HTML5, CSS3, JS, React. I had huge
+            esperience in comunication with clieents and partners. I
+            am skilled in analyzing problems and thinking of solutions
+            to accurately troubleshoot and solve technical problems.
+            For me IT is a new level of career development and growth
+            from IT procurement specialist to IT specialist
           </p>
         </div>
         <!--Projects-->
@@ -45,37 +49,55 @@
             <li class="project-item">
               <span class="project">
                 <a
-                  href="https://hellenglish.goit.global/"
+                  href="https://mariadekhtiaruk.github.io/goit-markup-hw-08/"
                   class="proect-link"
-                  >https://hellenglish.goit.global/</a
+                  >WebStudio</a
                 >
-                .........
-                <span class="project-bracket">[</span> HTML5, CSS3
+                .......................
+                <span class="project-bracket">[</span> HTML5, CSS3,
+                Saas
                 <span class="project-bracket">]</span>
+                <p class="about-project">
+                  WebStudio website with responsive layout, burger
+                  menu, modal window and attractive design. Was design
+                  by myself, my first educational project.
+                </p>
               </span>
             </li>
             <li class="project-item">
               <span class="project">
                 <a
-                  href="https://cryptohub.goit.global/"
+                  href="https://yuliia21bm.github.io/team-project-ice-cream-shop/"
                   class="proect-link"
-                  >https://cryptohub.goit.global/</a
+                  >IceCream</a
                 >
-                ..........
-                <span class="project-bracket">[</span> JavaScript
+                ...........................
+                <span class="project-bracket">[</span> HTML5, CSS3,
+                Saas, JavaScript
                 <span class="project-bracket">]</span>
+                <p class="about-project">
+                  Ice company website with responsive layout, burger
+                  menu, modal window and attractive design. Role:
+                  Developer in a team.
+                </p>
               </span>
             </li>
             <li class="project-item">
               <span class="project">
                 <a
-                  href="https://kidslike.goit.global/"
+                  href="https://mariadekhtiaruk.github.io/goit-js-hw-11/"
                   class="proect-link"
-                  >https://kidslike.goit.global/</a
+                  >Picture finder</a
                 >
                 .................
-                <span class="project-bracket">[</span> React.js,
-                Node.js <span class="project-bracket">]</span>
+                <span class="project-bracket">[</span> JavaScript,
+                API, JS libraries
+                <span class="project-bracket">]</span>
+                <p class="about-project">
+                  Small website for image searching. To develop it was
+                  used API Pixabay, libraries: axios, notiflix,
+                  SimpleLightbox
+                </p>
               </span>
 
               <a href=""></a>
@@ -163,6 +185,11 @@
         <!--Edication-->
         <div class="edication">
           <h3 class="title">Edication</h3>
+          <h4 class="edication-univercity">IT School GoIT (Kyiv)</h4>
+          <h5 class="speciality">Fullstack Developer</h5>
+          <p class="period">
+            2022-2023 <span class="line">|</span> Ukraine
+          </p>
           <h4 class="edication-univercity">
             Kiev National University of Trade and Economics
           </h4>
@@ -231,6 +258,9 @@
               <span class="Tech-skills-text">CSS3</span>
             </li>
             <li class="Tech-skills-item">
+              <span class="Tech-skills-text">Saas</span>
+            </li>
+            <li class="Tech-skills-item">
               <span class="Tech-skills-text">GIT</span>
             </li>
             <li class="Tech-skills-item">
@@ -244,16 +274,36 @@
           <h3 class="sidebar-title">Soft skills</h3>
           <ul class="Soft-skills-list">
             <li class="Soft-skills-item">
-              <span class="Soft-skills-text">Scrum</span>
+              <span class="Soft-skills-text">Problem Solving</span>
             </li>
             <li class="Soft-skills-item">
-              <span class="Soft-skills-text">Agile</span>
+              <span class="Soft-skills-text">Communicative</span>
             </li>
             <li class="Soft-skills-item">
-              <span class="Soft-skills-text">GTD</span>
+              <span class="Soft-skills-text"
+                >High Analytics Skills</span
+              >
             </li>
             <li class="Soft-skills-item">
-              <span class="Soft-skills-text">Teamwork</span>
+              <span class="Soft-skills-text">Team Work</span>
+            </li>
+            <li class="Soft-skills-item">
+              <span class="Soft-skills-text">Eager to learn</span>
+            </li>
+          </ul>
+        </div>
+        <div class="languages-skills">
+          <h3 class="sidebar-title">Languages</h3>
+          <ul class="languages-list">
+            <li class="languages-item">
+              <span class="languages-item-text"
+                >English - Upper-Intermediate</span
+              >
+            </li>
+            <li class="languages-item">
+              <span class="languages-item-text"
+                >Ukrainian - native</span
+              >
             </li>
           </ul>
         </div>
