--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="about">
           <h2 class="about-position">Junior Front-End Developer</h2>
           <h1 class="about-name">Maria Dekhtiaruk</h1>
-          <a href="/secondFile.html">Cover Letter</a>
+          <a href="./secondFile.html">Cover Letter</a>
 
           <p class="about-description">
             I am a Junior Front End developer. I had practical
