--- a/secondFile.html
+++ b/secondFile.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div class="main-second">
-      <a href="/index.html">Back to Resume</a>
+      <a href="./index.html">Back to Resume</a>
       <h3 class="title">Cover letter:</h3>
       <p class="cover-letter">
         Dear Sir/Madam, <br />
