--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
           <p class="about-description">
             I am a Junior Front End developer. I had practical
             experience in HTML5, CSS3, JS, React. I had huge
-            esperience in comunication with clieents and partners. I
-            am skilled in analyzing problems and thinking of solutions
-            to accurately troubleshoot and solve technical problems.
-            For me IT is a new level of career development and growth
-            from IT procurement specialist to IT specialist
+            esperience in comunication with clients and partners. I am
+            skilled in analyzing problems and thinking of solutions to
+            accurately troubleshoot and solve technical problems. For
+            me IT is a new level of career development and growth from
+            IT procurement specialist to IT specialist
           </p>
         </div>
         <!--Projects-->
