--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
           <p class="about-description">
             I am a Junior Front End developer. I had practical
-            experience in HTML5, CSS3, JS, React. I had huge
+            experience in HTML5, CSS3, JS, React. I have huge
             esperience in comunication with clients and partners. I am
             skilled in analyzing problems and thinking of solutions to
             accurately troubleshoot and solve technical problems. For
