--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <div class="about">
           <h2 class="about-position">Junior Front-End Developer</h2>
           <h1 class="about-name">Maria Dekhtiaruk</h1>
-          <a href="./secondFile.html">Cover Letter</a>
+          <!-- <a href="./secondFile.html">Cover Letter</a> -->
 
           <p class="about-description">
-            I am a Junior Front End developer. I had practical
+            I am a Junior Front-End developer. I had practical
             experience in HTML5, CSS3, JS, React. I have huge
             esperience in comunication with clients and partners. I am
             skilled in analyzing problems and thinking of solutions to
@@ -50,9 +50,18 @@
               <span class="project">
                 <a
                   href="https://mariadekhtiaruk.github.io/goit-markup-hw-08/"
+                  target="_blank"
                   class="proect-link"
                   >WebStudio</a
                 >
+
+                <a
+                  href="https://github.com/MariaDekhtiaruk/goit-markup-hw-08"
+                  target="_blank"
+                  class="git-link"
+                  >GitHub</a
+                >
+
                 .......................
                 <span class="project-bracket">[</span> HTML5, CSS3,
                 Saas
@@ -68,8 +77,15 @@
               <span class="project">
                 <a
                   href="https://yuliia21bm.github.io/team-project-ice-cream-shop/"
+                  target="_blank"
                   class="proect-link"
                   >IceCream</a
+                >
+                <a
+                  href="https://github.com/MariaDekhtiaruk/team-project-ice-cream-shop"
+                  target="_blank"
+                  class="git-link"
+                  >GitHub</a
                 >
                 ...........................
                 <span class="project-bracket">[</span> HTML5, CSS3,
@@ -86,8 +102,15 @@
               <span class="project">
                 <a
                   href="https://mariadekhtiaruk.github.io/goit-js-hw-11/"
+                  target="_blank"
                   class="proect-link"
                   >Picture finder</a
+                >
+                <a
+                  href="https://github.com/MariaDekhtiaruk/goit-js-hw-11"
+                  target="_blank"
+                  class="git-link"
+                  >GitHub</a
                 >
                 .................
                 <span class="project-bracket">[</span> JavaScript,
@@ -132,6 +155,9 @@
                 Tender results analysis and evaluation
               </li>
             </ul>
+            <p class="achievement">
+              Achievement: I’ve received average savings by 30%
+            </p>
           </div>
           <!--company 2-->
           <div>
@@ -156,6 +182,9 @@
                 Tender results analysis and evaluation
               </li>
             </ul>
+            <p class="achievement">
+              Achievement: I have launched new auction system
+            </p>
           </div>
           <!--company 3-->
           <div>
@@ -246,6 +275,12 @@
               >GitHub</a
             >
           </p>
+          <p class="contact">
+            <svg class="contact__icon" width="16" height="16">
+              <use href="./img/icon.svg#icon-location"></use>
+            </svg>
+            <a class="contact_link">Kyiv, Ukraine</a>
+          </p>
         </div>
         <!--Tech skills-->
         <div class="Tech-skills">
@@ -265,6 +300,9 @@
             </li>
             <li class="Tech-skills-item">
               <span class="Tech-skills-text">JavaScript</span>
+            </li>
+            <li class="Tech-skills-item">
+              <span class="Tech-skills-text">React</span>
             </li>
           </ul>
         </div>
