--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
               <span class="organization">Lifecell</span>
             </h4>
             <p class="period">
-              08.2015 - 10.2018 <span class="line">|</span> Ukraine
+              08.2011 - 10.2018 <span class="line">|</span> Ukraine
             </p>
-            <ul class="work-list">
+            <!-- <ul class="work-list">
               <li class="work-list-item">
                 Strategic materials projects
               </li>
@@ -208,7 +208,7 @@
               <li class="work-list-item">
                 Tender results analysis and evaluation
               </li>
-            </ul>
+            </ul> -->
           </div>
         </div>
         <!--Edication-->
