--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       </div>
       <!--sidebar-->
       <aside class="sidebar">
-        <img src="img/Снимок.PNG" alt="user photo" class="photo" />
+        <img src="img/photo.jpg" alt="user photo" class="photo" />
         <!--contacts-->
         <div class="contacts">
           <h3 class="sidebar-title">Contacts</h3>
